--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
   font-family: "Montserrat";
 }
 .container-fluid {
-padding: 3% 15%;
+padding: 3% 15% 7%;
 }
 
 h1 {
@@ -59,10 +59,14 @@ p {
 .title-image {
   width: 60%;
   transform: rotate(25deg);
+  position: absolute;
+  right:30%;
 }
 
 #features {
   padding: 7% 15%;
+  background-color: #fff;
+  position: relative;
 }
 
 .featurebox {
