--- a/styles.css
+++ b/styles.css
@@ -3,17 +3,6 @@ background-color: green;
 color: #fff;
 }
 
-#cta {
-  background-color: green;
-  color: #fff;
-  padding: 7% 15%;
-
-}
-
-.cta-heading {
-
-}
-
 body {
   font-family: "Montserrat";
 }
@@ -130,8 +119,32 @@ p {
   text-align: center;
 }
 
+
 .pricing-card {
   padding: 3% 2%;
+}
+
+/* cta section */
+
+#cta {
+  background-color: green;
+  color: #fff;
+  padding: 7% 15%;
+  text-align: center;
+
+}
+
+.cta-heading {
+  font-family: "Montserrat";
+  font-weight: 900;
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
+/* footer section */
+#footer {
+  padding: 7% 15%;
+  text-align: center;
 }
 
 @media (max-width: 1000px) {
@@ -143,6 +156,10 @@ p {
   .title-image {
     position: static;
     transform: rotate(0);
+  }
+
+  .social-icon {
+    margin: 20px 10px;
   }
 
 }
