--- a/css/styles.css
+++ b/css/styles.css
@@ -1,36 +1,43 @@
-#title{
-background-color: green;
-color: #fff;
+.container-fluid {
+padding: 7% 15%;
+}
+
+/* sections */
+.colored-section {
+  background-color: green;
+  color: #fff;
+}
+
+.white-section {
+    background-color: #fff;
 }
 
 body {
   font-family: "Montserrat";
-}
-.container-fluid {
-padding: 3% 15% 7%;
+  text-align: center;
 }
 
-h1 {
-font-family: "Montserrat";
-font-weight: 900;
-font-size: 3.5rem;
-line-height: 1.5;
-}
+h1, h2, h3, h4, h5, h6 {
+    font-family: "Montserrat";
+    font-weight: 900;
 
-h2 {
-  font-family: "Montserrat";
-  font-weight: 900;
-  font-size: 3rem;
-  line-height: 1.5;
-}
-
-h3 {
-  font-family: "Montserrat";
-  font-weight: 700;
 }
 
 p {
   color: #8f8f8f;
+}
+
+/* big heading */
+.big-heading {
+  font-family: "Montserrat";
+  font-weight: 900;
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
+.section-heading {
+  font-size: 3.5rem;
+  line-height: 1.5;
 }
 /* Navigation bar */
 .navbar {
@@ -56,6 +63,11 @@ p {
   margin: 10% 3% 5% 0;
 }
 
+#title.container-fluid {
+  padding: 3% 15% 7%;
+  text-align: left;
+}
+
 .title-image {
   width: 60%;
   transform: rotate(25deg);
@@ -64,13 +76,14 @@ p {
 }
 
 #features {
-  padding: 7% 15%;
-  background-color: #fff;
   position: relative;
 }
 
+.feature-title {
+  font-size: 1.5rem;
+}
+
 .featurebox {
-  text-align: center;
   padding: 5%;
 }
 
@@ -87,12 +100,11 @@ p {
 /* <!-- Testimonials --> */
 #testimonials {
   background-color: lightgreen;
-  text-align: center;
-  color: #fff;
 }
 
-.carousel-item {
-  padding: 7% 15%;
+.testimonial-text {
+  font-size: 3.5rem;
+  line-height: 1.5;
 }
 
 .testimonials-image {
@@ -104,7 +116,6 @@ p {
 /* press */
 #press {
   background-color: lightgreen;
-  text-align: center;
   padding-bottom: 3%;
 }
 
@@ -116,7 +127,12 @@ p {
 /* pricing section */
 #pricing {
   padding: 100px;
-  text-align: center;
+}
+
+
+.price-text {
+  font-size: 3rem;
+  line-height: 1.5;
 }
 
 
@@ -126,27 +142,8 @@ p {
 
 /* cta section */
 
-#cta {
-  background-color: green;
-  color: #fff;
-  padding: 7% 15%;
-  text-align: center;
-
-}
-
-.cta-heading {
-  font-family: "Montserrat";
-  font-weight: 900;
-  font-size: 3.5rem;
-  line-height: 1.5;
-}
 
 /* footer section */
-#footer {
-  padding: 7% 15%;
-  text-align: center;
-}
-
 @media (max-width: 1000px) {
 
   #title {
